fixed overflow

--- a/config-app/react/css/home.css
+++ b/config-app/react/css/home.css
@@ -23,6 +23,10 @@
   width: 300px;
 }
 
+.column-main-one header {
+  margin-bottom: -50px;
+}
+
 .column-main-two {
   width: 300px;
   height: 780px;
@@ -38,6 +42,7 @@
 
 .block {
   border-left: 2px solid #0f406a;
+  margin-top: -50px;
 }
 
 header {
